WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
179250
Requests handled by Service Worker should not go through preflighting
https://bugs.webkit.org/show_bug.cgi?id=179250
Summary
Requests handled by Service Worker should not go through preflighting
youenn fablet
Reported
2017-11-03 11:27:17 PDT
DocumentThreadableLoader is using preflight for any non simple CORS request. In case request is handled by SW, no preflighting should happen. If SW is not handling the request, preflighting should happen.
Attachments
Patch
(15.54 KB, patch)
2017-11-03 11:45 PDT
,
youenn fablet
no flags
Details
Formatted Diff
Diff
Build fix
(2.30 KB, patch)
2017-11-03 14:45 PDT
,
youenn fablet
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
youenn fablet
Comment 1
2017-11-03 11:45:09 PDT
Created
attachment 325928
[details]
Patch
youenn fablet
Comment 2
2017-11-03 14:45:25 PDT
Created
attachment 325964
[details]
Build fix
Alex Christensen
Comment 3
2017-11-03 15:11:11 PDT
Do we intend to always not allow requests that would require preflight? Why?
Alex Christensen
Comment 4
2017-11-03 15:22:16 PDT
Comment on
attachment 325928
[details]
Patch We really ought to move preflight to the right place.
WebKit Commit Bot
Comment 5
2017-11-03 16:09:31 PDT
Comment on
attachment 325928
[details]
Patch Clearing flags on attachment: 325928 Committed
r224439
: <
https://trac.webkit.org/changeset/224439
>
WebKit Commit Bot
Comment 6
2017-11-03 16:09:33 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 7
2017-11-15 12:23:52 PST
<
rdar://problem/35567451
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug